[package]
name = "gca-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gca-core = { path = "../gca" }

wasmi = { version = "0.11", optional = true }

[features]
default = ["wasmi-backend"]
wasmi-backend = ["wasmi"]
wasmtime-backend = []
js-backend = []
