[package]
name = "gca-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gca-core = { path = "../gca" }
log = "0.4.16"

wasmi = { version = "0.11", optional = true }

parity-wasm = "0.42.2"
pwasm-utils = "0.19.0"

downcast-rs = "1.2.0"

[dev-dependencies]
primitive-types = { version = "0.11", default-features = false, features = ["serde_no_std"] }
env_logger = "0.9.0"

[features]
default = ["wasmi-backend"]
wasmi-backend = ["wasmi"]
wasmtime-backend = []
js-backend = []
