[package]
name = "gca-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.11", default-features = false, features = ["serde_no_std"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bytes = { version = "1.1", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
sha3 = "0.10"

