[package]
name = "gca-rt-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = "0.2.5"

wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["bump"]
bump = []
wee-alloc = ["wee_alloc"]

