[package]
name = "gca-rt-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.11", default-features = false, features = ["serde_no_std"] }
cstr_core = "0.2.5"

gca-core = { path = "../../gca", version = "0.1.0" }

